@@ -1,8 +1,8 @@
 package com.bupt.util;
 
 import com.baomidou.mybatisplus.core.toolkit.LambdaUtils;
+import com.baomidou.mybatisplus.core.toolkit.support.LambdaMeta;
 import com.baomidou.mybatisplus.core.toolkit.support.SFunction;
-import com.baomidou.mybatisplus.core.toolkit.support.SerializedLambda;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
@@ -25,9 +25,9 @@ public class reflexUtil {
     }
 
     public static List<Field> getAllField(Class<?> class1){
-        List<Field> list= new ArrayList();
+        List<Field> list= new ArrayList<>();
         while (class1!= Object.class){
-            list.addAll(Arrays.stream(class1.getDeclaredFields()).collect(Collectors.toList()));
+            list.addAll(Arrays.stream(class1.getDeclaredFields()).toList());
             //获取父类
             class1=class1.getSuperclass();
         }
@@ -35,8 +35,8 @@ public class reflexUtil {
     }
 
     private static <T> String lN(SFunction<T, ?> func) {
-        SerializedLambda resolve = LambdaUtils.resolve(func);
-        String get = resolve.getImplMethodName().replace("get", "");
+        LambdaMeta lambdaMeta = LambdaUtils.extract(func);
+        String get = lambdaMeta.getImplMethodName().replace("get", "");
         get = get.substring(0, 1).toLowerCase() + get.substring(1);
         return get;
     }
